--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+<body>
 <section class="contactUsSection">
     <div class="container">
         <div class="row text-center">
@@ -195,3 +203,6 @@
         </div>
     </div>
 </section>
+
+</body>
+</html>
